# pyamlconf

./: .gitignore  README.md  publish.sh  pyproject.toml
pyamlconf/: config.py
tests/: config.local.yaml  config.yaml  test.py
