[project]
name = "pyamlconf"
version = "0.0.2"
description = "A simple YAML-based configuration loader for Python"
authors = [
    { name = "Monster Yao", email = "yymmiinngg@163.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pyyaml"
]

[project.urls]
Homepage = "https://github.com/yymmiinngg/pyamlconf"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"